--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,2 +1,12 @@
-footer{background-color: white; height: 60px; width: 100%; border-top: 1px solid #CCCCCC; position: fixed; display: flex; justify-content: center; bottom: 0;
-	align-items: center; line-height: 60px;}
+footer{
+	background-color: white;
+	height: 60px;
+	width: 100%;
+	border-top: 1px solid #CCCCCC;
+	position: fixed;
+	display: flex;
+	justify-content: center;
+	bottom: 0;
+	align-items: center;
+	line-height: 60px;
+	}
