--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -9,7 +9,7 @@
 	align-items: center;
 	text-align: right;
 	}
-section.filters{
+section.filters button{
 	font-size: 18px;
 	color: white;
 	background-color: #FF5A5F;
