--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -22,7 +22,7 @@ section.filters button{
 section.filters button:hover{
 	opacity: 0.9;
 	}
-.location{
+.locations{
 	text-align: left;
 	height: 100%;
 	width: 25%;
