--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -27,14 +27,13 @@ section.filters button:hover{
 	height: 100%;
 	width: 25%;
 	border-right: solid 1px #DDDDDD;
-	margin-left: 30px;
 	float: left;
 	}
 .amenities{
 	text-align: left;
 	height: 100%;
 	width:25%;
-	margin-left: 30px;
+	align-content: flex-start;
 	float: left;
 	}
 h3{
@@ -42,37 +41,56 @@ h3{
 	margin: 0px;
 	padding: 0px;
 	margin-top: 17px;
+	padding-left: 30px;
 	}
 h4{
 	font-weight: 400;
 	margin: 0px;
 	padding: 0px;
 	font-size: 14px;
+	padding-left: 30px;
 	}
+
 .popover{
+	visibility: hidden;
 	background-color: #FAFAFA;
 	border: solid #DDDDDD 1px;
 	border-radius: 4px;
-	position: relative;
+	position: absolute;
+	mergin-top: 7%;
+	padding-bottom: 10%;
 	}
-.popover h2{
+
+.popover li h2{
 	padding: 0;
 	margin: 0;
 	}
+
 .popover_list{
 	padding:0px;
 	margin:0px;
+	padding-left: 10%;
 	}
+
 li{
 	list-style-type: none;
+	padding-bottom: 5%;
 }
+
 ul{
-	list-style-type: none;
+	padding-top: 30px;
 }
+
+
 .locations:hover >.popover{
 	visibility: visible;
 	margin-bottom: 50px;
 }
+
 .amenities:hover > .popover{
 	visibility: visible;
+}
+
+ul{
+	list-style: none;
 }
