--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -6,6 +6,7 @@
 	border-radius: 4px;
 	text-align: right;
 	}
+
 section.filters button{
 	margin-right: 30px;
 	margin-top: 11px;
@@ -19,9 +20,11 @@ section.filters button{
 	border-radius: 4px;
 	opacity: 1;
 	}
+
 section.filters button:hover{
 	opacity: 0.9;
 	}
+
 .locations{
 	text-align: left;
 	height: 100%;
@@ -29,6 +32,7 @@ section.filters button:hover{
 	border-right: solid 1px #DDDDDD;
 	float: left;
 	}
+
 .amenities{
 	text-align: left;
 	height: 100%;
@@ -36,6 +40,7 @@ section.filters button:hover{
 	align-content: flex-start;
 	float: left;
 	}
+
 h3{
 	font-weight: 600;
 	margin: 0px;
@@ -43,6 +48,7 @@ h3{
 	margin-top: 17px;
 	padding-left: 30px;
 	}
+
 h4{
 	font-weight: 400;
 	margin: 0px;
@@ -59,6 +65,7 @@ h4{
 	position: relative;
 	margin-top: 7%;
 	padding-bottom: 10%;
+	z-index: 1;
 	}
 
 .popover li h2{
@@ -74,10 +81,11 @@ h4{
 
 li{
 	list-style-type: none;
-	padding-bottom: 5%;
+	padding-bottom: 2%;
 }
 
 ul{
+	list-style: none;
 	padding-top: 30px;
 }
 
@@ -88,8 +96,4 @@ ul{
 
 .amenities:hover > .popover{
 	visibility: visible;
-}
-
-ul{
-	list-style: none;
 }
