--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -77,11 +77,11 @@ h4{
 	padding:0px;
 	margin:0px;
 	padding-left: 10%;
+	padding-bottom: 10px;
 	}
 
 li{
-	list-style-type: none;
-	padding-bottom: 2%;
+	list-style-type: none;	
 }
 
 ul{
