--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -10,7 +10,7 @@
 }
 
 .places_title{
-	padding-top: 30px;
+    margin-bottom: -25px;
 }
 
 .articles{
@@ -19,16 +19,16 @@
 	flex-wrap: wrap;
 	justify-content: center;
 }
+
 .places article{
 	width: 390px;
 	margin: 20px;
 	padding: 20px;
 	border: solid #FF5A5F 1px;
 	border-radius: 4px;
-	text-align: center;
-	font-size: 30px;
 }
 
 article h2{
 	font-size: 30px;
+	text-align: center;
 }
